--- a/WebContent/paginas/loginView.xhtml
+++ b/WebContent/paginas/loginView.xhtml
@@ -32,7 +32,7 @@
 					<h:inputSecret id="inputSenha" label="Campo Senha" value="password" maxlength="10" size="30" required="true" />
 					<h:outputText /><br></br>
 					
-					<h:commandButton value="Confirmar" action="XXXXXXXXXXXXXXXX" />
+					<h:commandButton value="Confirmar" action="#{usuarioBean.validaLogin}" />
 					<h:outputText />
 				</h:column>
 			</h:form>
