--- a/WebContent/paginas/timeline/timelineView.xhtml
+++ b/WebContent/paginas/timeline/timelineView.xhtml
@@ -6,20 +6,19 @@
 <h:head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 <title>MyGarage</title>
+
 </h:head>
-<h:body onload="javascript:LINKS.submit();return false;">
-
-
+<h:body onload="#{timelineBean.inicializaPagina()}">
 
 	<h:outputLabel value="Timeline"
 		style="color:Navy;font-size: 2em;background-color:#DBDBDB;font-family: 'Futura Md BT';"/>
 	<br></br><br></br>
 
-	<h:outputText value="#{usuarioBean.msgRetorno}"
+	<h:outputText value="#{timelineBean.msgRetorno}"
 		styleClass="msgInfo" /><br></br><br></br>
 	<hr />
 	<h:panelGrid columns="2" cellspacing="5" cellpadding="5" border="1">
-		<h:form id="LINKS" action="#{timelineBean.inicializaPagina()}">
+		<h:form id="LINKS">
 			<br></br><br></br>
 			<h:commandLink action="#{usuarioBean.consultaUsuarioController()}" value="Usuario" />
 			<br></br><br></br>	
@@ -47,4 +46,5 @@
 	</h:panelGrid>
 
 </h:body>
+
 </html>
