Login funcionando. Timeline draft

--- a/WebContent/paginas/timeline/timelineView.xhtml
+++ b/WebContent/paginas/timeline/timelineView.xhtml
@@ -24,7 +24,7 @@
 			<br></br><br></br>	
 						
 			<br></br><br></br>
-			<h:commandLink action="#" value="Amigos" />
+			<h:commandLink action="/paginas/amigos/amigosView" value="Amigos" />
 			<br></br><br></br>
 			
 			<br></br><br></br>
