--- a/WebContent/paginas/usuario/manterUsuarioView.xhtml
+++ b/WebContent/paginas/usuario/manterUsuarioView.xhtml
@@ -69,7 +69,7 @@
 
 	</h:form>
 	<h:form id="linkVoltar">
-		<h:commandButton value="Tela Inicial" action="/paginas/loginView"/>
+		<h:commandButton value="Tela Inicial" action="/paginas/timeline/timelineView"/>
 	</h:form>
 	<hr />
 
