--- a/WebContent/paginas/usuario/usuarioView.xhtml
+++ b/WebContent/paginas/usuario/usuarioView.xhtml
@@ -46,8 +46,9 @@
 		<h:commandLink action="#{usuarioBean.telaAlteraUsuarioController()}" value="Alterar"/>
 		</h:commandLink><br></br><br></br>
 		<h:outputText />
-			<h:commandButton value="Tela Inicial" action="/paginas/loginView"/>
+			<h:commandButton value="Tela Inicial" action="/paginas/timeline/timelineView"/>
 		<h:outputText />
+
 
 
 	</h:form>
