--- a/WebContent/paginas/timeline/timelineView.xhtml
+++ b/WebContent/paginas/timeline/timelineView.xhtml
@@ -28,7 +28,7 @@
 			<br></br><br></br>
 			
 			<br></br><br></br>
-			<h:commandLink action="#" value="Carros" />
+			<h:commandLink action="/paginas/carros/carroView" value="Carros" />
 			<br></br><br></br>
 			
 			<br></br><br></br>
