--- a/WebContent/paginas/usuario/manterUsuarioView.xhtml
+++ b/WebContent/paginas/usuario/manterUsuarioView.xhtml
@@ -12,20 +12,21 @@
 </h:head>
 <h:body>
 
-	
+
 	<h:outputLabel value="MyGarage - Cadastrar Usuario"
 		style="color:Navy;font-size: 2em;background-color:#DBDBDB;font-family: 'Futura Md BT';"
 		rendered="#{empty usuarioBean.usuario.idUsuario}" />
 
 	<h:outputLabel value="MyGarage - Alterar Usuario"
 		style="color:Navy;font-size: 2em;background-color:#DBDBDB;font-family: 'Futura Md BT';"
-		rendered="#{!empty usuarioBean.usuario.idUsuario}"/> <br></br><br></br>
-	
-	
-	<h:outputText value="#{usuarioBean.msgRetorno}"
-		styleClass="msgInfo" />
+		rendered="#{!empty usuarioBean.usuario.idUsuario}" />
+	<br></br>
+	<br></br>
 
-	<h:form id="inputForm">
+
+	<h:outputText value="#{usuarioBean.msgRetorno}" styleClass="msgInfo" />
+
+	<h:form id="inputForm" enctype="multipart/form-data">
 		<h:messages styleClass="msgWarn2" />
 
 		<h:panelGrid>
@@ -39,37 +40,53 @@
 			<h:inputText id="inputNome" value="#{usuarioBean.usuario.nome}"
 				label="Campo Nome" maxlength="50" size="50" required="true" />
 			<h:outputText />
-			
+
 			<h:outputLabel value="Sobrenome" for="inputSobrenome" />
-			<h:inputText id="inputSobrenome"  value="#{usuarioBean.usuario.sobrenome}"
-				label="Campo Nome" maxlength="50" size="50" />
+			<h:inputText id="inputSobrenome"
+				value="#{usuarioBean.usuario.sobrenome}" label="Campo Nome"
+				maxlength="50" size="50" />
 			<h:outputText />
 
 			<h:outputLabel value="Telefone" for="inputTelefone" />
-			<h:inputText id="inputTelefone"  value="#{usuarioBean.usuario.telefone}"
-				label="Campo Telefone" maxlength="50" size="50" />
-			<h:outputText />
-						
-			<h:outputLabel value="Email" for="inputEmail" />
-			<h:inputText id="inputEmail"  value="#{usuarioBean.usuario.email}"
-				label="Campo Email" maxlength="50" size="50" required="true" />
-			<h:outputText />
-			
-			<h:outputLabel value="Senha" for="inputSenha" />
-			<h:inputText id="inputSenha"  value="#{usuarioBean.usuario.senha}"
-			label="Campo Senha" maxlength="50" size="50" required="true" />
+			<h:inputText id="inputTelefone"
+				value="#{usuarioBean.usuario.telefone}" label="Campo Telefone"
+				maxlength="50" size="50" />
 			<h:outputText />
 
+			<h:outputLabel value="Email" for="inputEmail" />
+			<h:inputText id="inputEmail" value="#{usuarioBean.usuario.email}"
+				label="Campo Email" maxlength="50" size="50" required="true" />
 			<h:outputText />
-			<h:commandButton value="Confirmar" action="#{usuarioBean.salvarUsuarioController()}"/>
-			<h:outputText /><br></br><br></br>
+
+			<h:outputLabel value="Senha" for="inputSenha" />
+			<h:inputText id="inputSenha" value="#{usuarioBean.usuario.senha}"
+				label="Campo Senha" maxlength="50" size="50" required="true" />
+			<h:outputText />
+
+
+			<h:outputLabel value="Foto" for="inputFoto" />
+			<h:inputFile id="inputFoto" value="#{usuarioBean.uploadedPhoto}" />
+			<h:commandButton value="Upload" action="#{usuarioBean.uploadFoto()}" />
+			<br></br>
+			<h:outputLabel value="Foto carregada:"/>
+			<br></br>
+			<h:graphicImage  rendered="true"  name="/images/#{usuarioBean.usuario.foto}" />
+
+
+			<h:outputText />
+			<h:commandButton value="Confirmar"
+				action="#{usuarioBean.salvarUsuarioController()}" />
+			<h:outputText />
+			<br></br>
+			<br></br>
 
 		</h:panelGrid>
 
 
 	</h:form>
 	<h:form id="linkVoltar">
-		<h:commandButton value="Tela Inicial" action="/paginas/timeline/timelineView"/>
+		<h:commandButton value="Tela Inicial"
+			action="/paginas/timeline/timelineView" />
 	</h:form>
 	<hr />
 
