--- a/WebContent/paginas/amigos/amigosView.xhtml
+++ b/WebContent/paginas/amigos/amigosView.xhtml
@@ -25,12 +25,12 @@
 			<h:outputLabel value="Digite o Nome para buscar novos amigos:"
 				for="inputNome" />
 		
-			<h:inputText id="inputNome" value="#{amigosBean.usuario.nome}"
-				label="Campo Nome" maxlength="50" size="50" required="true" />
+			<h:inputText id="inputNome" value="#{amigosBean.nomeBusca}"
+				label="Campo Nome" maxlength="50" size="50"/>
 			<h:outputText />
 			
 			<h:commandButton value="Buscar"
-				action="#{amigosBean.consultaUsuariosController(amigosBean.usuario)}" />
+				action="#{amigosBean.consultaUsuariosController()}" />
 			<h:outputText />
 
 			<h:dataTable value="#{amigosBean.usuarioList}" align="left"
@@ -50,7 +50,7 @@
 						<h:outputText value="Nome" />
 					</f:facet>
 					<h:commandLink value="#{usuarioLinha.nome}"
-						action="#{amigosBean.consultaUsuarioAmigoController(usuarioLinha)}" />
+						action="#{amigosBean.consultaUsuarioAmigoController(usuarioLinha.idUsuario)}" />
 
 				</h:column>
 
@@ -72,15 +72,19 @@
 		</h:form>
 	</h:panelGrid>
 
-	<hr />
+	<br></br><br></br><hr />
 
+	<h:outputLabel value="Você não tem amigos cadastrados"
+		style="color:red; font-style: italic;font-family: 'Georgia';"
+		rendered="#{empty amigosBean.amigosList}" />
+		
 	<h:form id="formConsultar">
 		<h:dataTable value="#{amigosBean.amigosList}" align="left"
 			cellspacing="5" cellpadding="5" var="amigoLinha"
 			rendered="#{!empty amigosBean.amigosList}">
 
 			<f:facet name="header">
-				<h:outputLabel value="Seus amigos:" />
+				<h:outputLabel value="SEUS AMIGOS:" />
 			</f:facet>
 
 			<f:facet name="footer">
@@ -92,7 +96,7 @@
 					<h:outputText value="Nome" />
 				</f:facet>
 				<h:commandLink value="#{amigoLinha.nome}"
-					action="#{amigosBean.consultaUsuarioAmigoController(amigoLinha)}" />
+					action="#{amigosBean.consultaUsuarioAmigoController(amigoLinha.idUsuario)}" />
 
 			</h:column>
 
