--- a/WebContent/paginas/amigos/usuarioAmigoView.xhtml
+++ b/WebContent/paginas/amigos/usuarioAmigoView.xhtml
@@ -12,42 +12,131 @@
 </h:head>
 <h:body>
 
-	<h:outputLabel value="MyGarage - Amigo"
-		style="color:Navy;font-size: 2em;background-color:#DBDBDB;font-family: 'Futura Md BT';"/>
-	
-	<br></br><br></br>
+	<h:outputLabel value="MyGarage"
+		style="color:Navy;font-size: 2em;background-color:#DBDBDB;font-family: 'Futura Md BT';" />
+
+	<br></br>
+	<br></br>
 	<h:outputText value="#{amigosBean.msgRetorno}" styleClass="msgInfo" />
 	<hr />
-	<h:form id="inputForm">		
-		<h:panelGrid  columns="2">
 
-			<h:outputLabel value="Nome: "/>
-			<h:outputText value="#{amigosBean.usuario.nome}"/>
-			
-			<h:outputLabel value="Sobrenome: "/>
-			<h:outputText value="#{amigosBean.usuario.sobrenome}"/>
-			
-			<h:outputLabel value="Telefone: "/>
-			<h:outputText value="#{amigosBean.usuario.telefone}"/>
-			
-			<h:outputLabel value="Email: "/>
-			<h:outputText value="#{amigosBean.usuario.email}"/>
-			
-			<br></br><br></br><br></br><br></br>
-			<h:commandButton value="Adicionar Amigo" action="#{amigosBean.adicionaAmigoController()}"
-				rendered="#{empty amigosBean.isFriend}" />
-			<h:commandButton value="Desfazer Amizade" action="#{amigosBean.excluirAmigoController()}"
-				rendered="#{!empty amigosBean.isFriend}"/>			
-			
+	<h:panelGrid columns="3" cellspacing="5" cellpadding="5" border="1">
+		<h:panelGrid>
+
+			<h:form id="inputForm">
+				<h:panelGrid columns="2">
+
+					<h:outputLabel value="Nome: " />
+					<h:outputText value="#{amigosBean.usuario.nome}" />
+
+					<h:outputLabel value="Sobrenome: " />
+					<h:outputText value="#{amigosBean.usuario.sobrenome}" />
+
+					<h:outputLabel value="Telefone: " />
+					<h:outputText value="#{amigosBean.usuario.telefone}" />
+
+					<h:outputLabel value="Email: " />
+					<h:outputText value="#{amigosBean.usuario.email}" />
+				</h:panelGrid>
+
+				<br></br>
+				<h:outputText value="Vocês são amigos desde "
+					rendered="#{amigosBean.isFriend=='S'}" />
+				<h:outputText
+					value="#{amigosBean.relacionamento.dataIniRelacionamento}"
+					rendered="#{amigosBean.isFriend=='S'}">
+					<f:convertDateTime dateStyle="default" />
+				</h:outputText>
+
+				<br></br>
+				<h:outputText value="Vocês não são amigos."
+					rendered="#{amigosBean.isFriend=='N'}" />
+				<br></br>
+				<h:commandButton value="Adicionar Amigo"
+					action="#{amigosBean.adicionaAmigoController()}"
+					rendered="#{amigosBean.isFriend=='N'}" />
+					
+				<h:commandButton value="Desfazer Amizade"
+					action="#{amigosBean.excluirAmigoController()}"
+					rendered="#{amigosBean.isFriend=='S'}" />
+				<hr />
+			</h:form>
 		</h:panelGrid>
+
+		<h:panelGrid>
+			<h:outputLabel value="Timeline Vazia" rendered="#{empty timelineBean.timelineList}" />
 		
-		<hr /><br></br><br></br><br></br>
+			<h:form id="formTimeline">
+				<h:dataTable value="#{timelineBean.timelineList}" align="left"
+					columns="2" cellspacing="5" cellpadding="5" var="timelineLinha"
+					rendered="#{!empty timelineBean.timelineList}">
+
+					<f:facet name="header">
+						<h:outputLabel value="Feed de Noticias" />
+					</f:facet>
+
+					<f:facet name="footer">
+						<h:outputLabel value="Fim da Lista" styleClass="titleStrong" />
+					</f:facet>
+
+					<h:column>
+						<h:inputHidden value="#{timelineLinha.idTimeline}" />
+					</h:column>
+
+					<h:column>
+						<h:outputText value="Postado em " />
+						<h:outputText value="#{timelineLinha.dataCadastro}">
+							<f:convertDateTime dateStyle="default" />
+						</h:outputText>
+						<br></br>
+						<br></br>
+
+						<h:outputText value="#{timelineLinha.descricao}" />
+						<br></br>
+						<br></br>
+						<hr />
+					</h:column>
+				</h:dataTable>
+			</h:form>
+		</h:panelGrid>
+
+		<h:panelGrid>
+		
+			<h:outputLabel value="Não há carros cadastrados" rendered="#{empty amigosBean.carrosList}" />
+			
+			<h:dataTable value="#{amigosBean.carrosList}" var="carroLinha"
+				rendered="#{!empty amigosBean.carrosList}">
+				<h:column>
+					<f:facet name="header">
+						<h:outputText value="Apelido" />
+					</f:facet>
+					<h:outputText value="#{carroLinha.apelido}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">
+						<h:outputText value="Marca" />
+					</f:facet>
+					<h:outputText value="#{carroLinha.marca}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">
+						<h:outputText value="Modelo" />
+					</f:facet>
+					<h:outputText value="#{carroLinha.modelo}" />
+				</h:column>
+
+			</h:dataTable>
+		</h:panelGrid>
+	</h:panelGrid>
+
+
+
+
+	<h:form id="links">
+		<h:commandButton value="Timeline"
+			action="/paginas/timeline/timelineView" />
+		<h:commandButton value="Amigos" action="/paginas/amigos/amigosView" />
 		<h:outputText />
-			<h:commandButton value="Voltar" action="/paginas/amigos/amigosView"/>
-		<h:outputText />
-
-
-
 	</h:form>
 
 	<hr />
