--- a/WebContent/paginas/carros/carroView.xhtml
+++ b/WebContent/paginas/carros/carroView.xhtml
@@ -2,64 +2,114 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:b="http://bootsfaces.net/ui"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 	<title>MyGarage</title>
 </h:head>
-<h:body>
+<h:body onload="#{carroBean.inicializaPaginaAcessorios()}">
+	<b:container layout="fluid">
+		<h3>
+			<h:outputLabel value="MyGarage - Carro" />
+		</h3>
+		<h:form id="linkVoltar1">
+			<b:commandButton value="Home" action="/paginas/timeline/timelineView"
+				look="primary" icon="home" style="float: right;">
+			</b:commandButton>
+		</h:form>
+	</b:container>
 
-	<h:outputLabel value="MyGarage - Carro"
-		style="color:Navy;font-size: 2em;background-color:#DBDBDB;font-family: 'Futura Md BT';"/>
-	
-	<br></br><br></br>
 	<h:outputText value="#{carroBean.msgRetorno}" styleClass="msgInfo" />
 	<hr />
-	<h:form id="inputForm">		
-		<h:panelGrid  columns="2">
+	<b:container layout="fluid">
+		<h:form id="inputForm">
+			<h:panelGrid columns="2">
+				<h:outputLabel value="Codigo: " />
+				<h:outputText value="#{carroBean.carro.idCarro}" />
 
-			<h:outputLabel value="Codigo: "/> 	
-			<h:outputText value="#{carroBean.carro.idCarro}"/>
-			
-			<h:outputLabel value="Apelido: "/>
-			<h:outputText value="#{carroBean.carro.apelido}"/>
-			
-			<h:outputLabel value="Marca "/>
-			<h:outputText value="#{carroBean.carro.marca}"/>
-			
-			<h:outputLabel value="Modelo: "/>
-			<h:outputText value="#{carroBean.carro.modelo}"/>
-			
-			<h:outputLabel value="Ano Fabricação: "/>
-			<h:outputText value="#{carroBean.carro.anoFabricacao}"/>
-			
-			<h:outputLabel value="Ano Modelo: "/>
-			<h:outputText value="#{carroBean.carro.anoModelo}"/>
-			
-			<h:outputLabel value="Cor: "/>
-			<h:outputText value="#{carroBean.carro.cor}"/>
-			
-			<h:outputLabel value="Placa: "/>
-			<h:outputText value="#{carroBean.carro.placa}"/>
-			
-			<h:outputLabel value="Quilometragem: "/>
-			<h:outputText value="#{carroBean.carro.quilometragem}"/>
-			
-	</h:panelGrid>
-		
-		<h:commandLink action="#{carroBean.excluiCarroController()}" value="Excluir"
-			onclick="if(!confirm('Confirma a exclusão do #{carroBean.carro.apelido}?')) return false"><br></br>
-		<h:commandLink action="#{carroBean.telaAlteraCarroController()}" value="Alterar"/>
-		</h:commandLink><br></br><br></br>
-		<h:outputText />
-			<h:commandButton value="Tela Inicial" action="/paginas/loginView"/>
-		<h:outputText />
+				<h:outputLabel value="Apelido: " />
+				<h:outputText value="#{carroBean.carro.apelido}" />
 
+				<h:outputLabel value="Marca " />
+				<h:outputText value="#{carroBean.carro.marca}" />
 
+				<h:outputLabel value="Modelo: " />
+				<h:outputText value="#{carroBean.carro.modelo}" />
+
+				<h:outputLabel value="Tipo Combustivel: " />
+				<h:outputText value="#{carroBean.carro.descCombut}" />
+
+				<h:outputLabel value="Ano Fabricação: " />
+				<h:outputText value="#{carroBean.carro.anoFabricacao}" />
+
+				<h:outputLabel value="Ano Modelo: " />
+				<h:outputText value="#{carroBean.carro.anoModelo}" />
+
+				<h:outputLabel value="Cor: " />
+				<h:outputText value="#{carroBean.carro.cor}" />
+
+				<h:outputLabel value="Placa: " />
+				<h:outputText value="#{carroBean.carro.placa}" />
+
+				<h:outputLabel value="Quilometragem: " />
+				<h:outputText value="#{carroBean.carro.quilometragem}" />
+			</h:panelGrid>
+			<b:commandButton action="/paginas/carros/manterCarroView"
+				value="Alterar" look="info" icon="edit" style="margin-right: 5px;" />
+			<b:commandButton action="#{carroBean.excluiCarroController()}"
+				value="Excluir"
+				onclick="if(!confirm('Confirma a exclusão do #{carroBean.carro.apelido}?')) return false"
+				look="danger" icon="remove" style="margin-right: 5px;">
+			</b:commandButton>
+
+			<br></br>
+			<br></br>
+			<h:outputText />
+		</h:form>
+	</b:container>
+
+	<b:container layout="fluid">
+		<h3>
+			<h:outputLabel value="Acessórios" />
+		</h3>
+		<h:form id="formAcessorios">
+			<h:outputLabel value="Carro sem acessórios"
+				rendered="#{empty carroBean.acessoriosList}" />
+			<br></br>
+			<b:dataTable value="#{carroBean.acessoriosList}"
+				var="acessoriosLinha"
+				styleClass="table table-striped table-bordered" style="width:100%"
+				rendered="#{!empty carroBean.acessoriosList}">
+				<h:column>
+					<f:facet name="header">
+						<h:outputText value="Nome" />
+					</f:facet>
+					<b:commandButton
+						action="#{carroBean.consultaAcessoriosController(acessoriosLinha)}"
+						value="" look="primary" icon="check" style="float: left;"
+						size="xs" />
+						&nbsp;
+					<h:outputText value="#{acessoriosLinha.nome}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">
+						<h:outputText value="Descrição" />
+					</f:facet>
+					<h:outputText value="#{acessoriosLinha.descricao}" />
+				</h:column>
+			</b:dataTable>
+			<b:commandButton action="#{carroBean.telaAdicionarAcessorios()}"
+				value="Adicionar Acessorio" look="primary" icon="plus-sign" />
+		</h:form>
+	</b:container>
+	<h:form>
+		<b:commandButton value="Voltar"
+			action="/paginas/carros/carroListaView" look="primary"
+			icon="arrow-left" />
 	</h:form>
 
-	<hr />
 
 
 </h:body>
